# azure-web-app-vfs

./: .env.template  .gitignore  .pylintrc  Dockerfile  README.md  config.py  docker-compose.yml  pyproject.toml  requirements.txt  wsgi.py
.github/: dependabot.yml
.github/workflows/: dependabot-import-test.yml  flake8.yml  mypy.yml  pylint.yml
app/: __init__.py  extensions.py
app/admin/: __init__.py  routes.py
app/credential/: __init__.py  routes.py
app/file/: __init__.py  routes.py
app/forms/: admin_form.py  credential_form.py  file_form.py  resource_form.py
app/home/: __init__.py  routes.py
app/log/: README.md
app/login/: __init__.py  routes.py
app/models/: admin.py  credential.py  file.py  login.py  resource.py
app/resource/: __init__.py  routes.py
app/templates/: base.html  index.html  unauthorized.html
app/templates/admin/: delete.html  form.html  index.html
app/templates/admin/credentials/: delete.html  form.html  index.html
app/templates/admin/files/: form.html  index.html
app/templates/credential/: delete.html  form.html  index.html
app/templates/error/: error_400.html  error_500.html  unauthorized.html
app/templates/file/: delete.html  form.html  index.html
app/templates/resource/: form.html  index.html  view.html
etc/nginx/sites-available/: azurefiles
etc/systemd/system/: azurefiles.service
