[tool.poetry]
name = "azure-web-app-vfs"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
astroid = "^3.3.5"
bcrypt = "^5.0.0"
blinker = "^1.9.0"
certifi = "^2025.1.31"
cffi = "^2.0.0"
charset-normalizer = "^3.4.3"
click = "^8.3.0"
dill = "^0.4.0"
flake8 = "^7.1.1"
flask = "^3.1.2"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.2"
greenlet = "^3.2.4"
gunicorn = "^23.0.0"
idna = "^3.10"
importlib-metadata = "^8.5.0"
infinity = "^1.5"
intervals = "^0.9.2"
isort = "^6.0.0"
itsdangerous = "^2.2.0"
jinja2 = "^3.1.5"
mariadb = "^1.1.11"
markupsafe = "^3.0.2"
marshmallow = "^4.0.1"
mccabe = "^0.7.0"
mypy = "^1.18.2"
mypy-extensions = "^1.0.0"
packaging = "^25.0"
platformdirs = "^4.4.0"
pycodestyle = "^2.12.1"
pycparser = "^2.23"
pyflakes = "^3.2.0"
pylint = "^3.3.8"
pymemcache = "^4.0.0"
python-dotenv = "^1.0.1"
requests = "^2.32.5"
sqlalchemy = "^2.0.43"
sqlalchemy-utils = "^0.42.0"
tomli = "^2.1.0"
tomlkit = "^0.13.2"
typing-extensions = "^4.15.0"
urllib3 = "^2.2.3"
validators = "^0.35.0"
werkzeug = "^3.1.3"
wheel = "^0.45.0"
wtforms = "^3.2.1"
wtforms-components = "^0.11.0"
zipp = "^3.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
